made the nav bar clickable

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -72,10 +72,12 @@ a:any-link {
 .button-icon::after {
   transform: translate(-18px, -12px);
 }
-:is(.header:hover, .header:focus-within) .button-icon {
+/* //////////////////////////////////////////////////////// */
+
+/* :is(.header:hover, .header:focus-within) .button-icon {
   background-color: transparent;
   transform: scale(1.8);
-  /* transform: translateX(-5px); */
+  transform: translateX(-5px);
 }
 
 :is(.header:hover, .header:focus-within) .button-icon::before {
@@ -88,7 +90,26 @@ a:any-link {
 
 :is(.header:hover, .header:focus-within) .mob-nav {
   display: block;
+} */
+
+/* ////////////////////////////////// */
+.header.clicked .button-icon {
+  background-color: transparent;
+  transform: scale(1.8);
 }
+
+.header.clicked .button-icon::before {
+  transform: translateX(-20px) rotate(45deg);
+}
+
+.header.clicked .button-icon::after {
+  transform: translateX(-20px) rotate(-45deg);
+}
+
+.header.clicked .mob-nav {
+  display: block;
+}
+
 .mob-nav {
   display: none;
 }
@@ -229,7 +250,7 @@ a:any-link {
   height: 40px;
   margin-right: 10vw;
   border: 2px solid var(--ACCENT-COLOR);
-  border-radius: 20px;    
+  border-radius: 20px;
   width: 10vw;
   max-width: 200px;
   min-width: 80px;
