--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -374,32 +374,59 @@ section .contact-us h1::after,
   text-align: center;
   align-self: center;
 }
-.project {
+.project-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: space-between;
+}
+.project-container .right-col,
+.left-col {
+  /* width: 50%; */
   display: flex;
   flex-flow: column nowrap;
-  place-content: center;
-  margin-top: 2rem;
-  width: 100%;
+  align-items: center;
 }
-.project figure {
-  display: grid;
-  place-content: center;
-  width: 100%;
-  padding-top: 1rem;
+.project-container .right-col {
+  border-left: 2px solid #1af496;
 }
-.project figure figcaption {
-  padding: 1rem;
-  text-align: center;
-  font-weight: 900;
+
+.project-container .all-project {
+  margin: 1rem 0;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
 }
-.project figure img {
-  width: 90vw;
-  aspect-ratio: 2.5/1;
-  height: auto;
-  box-shadow: var(--HEAD-SHADOW-DESK);
+.project-container .all-project img {
+  max-width: 35vw;
+  aspect-ratio: 3/2;
 }
-.project figure img:hover {
-  transform: scale(110%);
+.project-details {
+  display: flex;
+  column-gap: 1rem;
+}
+.project-container .all-project .btn {
+  color: black;
+  border: 1px solid --BDCOLOR;
+  background-color: var(--ACCENT-COLOR);
+  border-radius: 4px;
+  padding: 4px;
+}
+
+@media screen and (max-width: 800px) {
+  .project-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: space-between;
+  }
+  .project-container .right-col {
+    border: none;
+  }
+  .project-container .all-project img {
+    max-width: 90%;
+    aspect-ratio: 3/2;
+  }
 }
 section {
   position: relative;
