--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
   scroll-behavior: smooth;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   /* overflow-y: hidden; */
 }
 :root {
