--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -262,7 +262,7 @@ a:any-link {
   position: relative;
   /* background-color: red; */
   max-width: 50vw;
-  transform: scale(0.9);
+  /* transform: scale(0.9); */
 
   /* display: none; */
 }
