--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -308,10 +308,15 @@ section .contact-us h1,
   color: var(--ACCENT-COLOR);
   padding-bottom: 1rem;
 }
-.about p {
-  margin-right: 2rem;
-  margin-left: 0.5rem;
-  text-align: justify;
+.second-main {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+.second-main p {
+  width: 85%;
+  text-align: center;
+  margin: 1rem 2rem 3rem 0.5rem;
 }
 
 .about h1::after,
@@ -350,8 +355,7 @@ section .contact-us h1::after,
   place-content: center;
   /* width: 100%; */
   column-gap: 2.5rem;
-  margin-right: 2rem;
-  margin-left: 1rem;
+  margin: 0 2rem 2rem 1rem;
 }
 .shapes i {
   font-size: 5rem;
@@ -410,11 +414,13 @@ section .contact-us h1::after,
   column-gap: 1rem;
 }
 .project-container .all-project .btn {
-  color: black;
   border: 1px solid --BDCOLOR;
   background-color: var(--ACCENT-COLOR);
   border-radius: 4px;
   padding: 4px;
+}
+.project-container .all-project .btn a {
+  color: var(--BDCOLOR);
 }
 
 @media screen and (max-width: 800px) {
