--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -316,6 +316,7 @@ section .contact-us h1,
 .second-main p {
   width: 85%;
   text-align: center;
+  font-size: larger;
   margin: 1rem 2rem 3rem 0.6rem;
 }
 
