fix the down button for mobile devices

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -520,7 +520,7 @@ textarea {
   .down-button {
     /* align-self: center; */
     position: absolute;
-    bottom: 100px;
+    bottom: 30%;
     left: 50%;
     transform: translateX(-50%);
   }
