--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -412,6 +412,8 @@ section .contact-us h1::after,
 .project-container .all-project img {
   max-width: 35vw;
   aspect-ratio: 3/2;
+  border-radius: 16px;
+  box-shadow: 1px 0px 9px 4px var(--ACCENT-COLOR);
 }
 .project-details {
   display: flex;
