--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,9 +18,7 @@
   --ACCENT-COLOR: #1af496;
   --background-complementarity: #0e0c18;
 }
-.nowrap {
-  white-space: nowrap;
-}
+
 header {
   width: 100%;
 }
@@ -29,6 +27,7 @@ body {
   background-color: var(--BDCOLOR);
   color: var(--TXTCOLOR);
 }
+
 a:any-link {
   color: var(--TXTCOLOR);
   text-decoration: none;
@@ -208,16 +207,19 @@ a:any-link {
 .outer {
   display: flex;
   flex-flow: column nowrap;
-  /* width: 100vw; */
-  height: 100vh;
+
+  height: 90vh;
   position: relative;
+  margin-top: 3rem;
+
+  /* outline: 1px solid red; */
 }
 .down-button {
-  align-self: center;
-  /* position: absolute; */
-  /* bottom: 100px; */
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
+  /* align-self: center; */
+  position: absolute;
+  bottom: 30%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .down-button i {
   font-size: 4rem;
@@ -227,9 +229,13 @@ a:any-link {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  max-width: 1505px;
+  margin: 0 auto;
 }
 .myname {
   padding-top: 1rem;
+  /* width: 60%; */
+  max-width: 981px;
 }
 .top-main p {
   margin-left: 1rem;
@@ -237,40 +243,33 @@ a:any-link {
   font: 5vw monospace;
   font-weight: 900;
   margin-bottom: 0.5rem;
+  font-size: 4rem;
 }
 .top-main p:nth-child(2) {
   background-clip: text;
   background: var(--liner-gradient);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  line-height: 60px;
 }
 .top-main p:nth-child(3) {
   font-weight: 400;
-  font-size: 3vw;
+  font-size: 1rem;
 }
 .top-main p:last-child {
   /* text-align: justify; */
   color: var(--TXTCOLOR);
-  font: 1.5vw monospace;
+  font: 14px monospace;
 }
 .rak,
 .dot {
   color: var(--ACCENT-COLOR);
 }
 .bitmoji {
-  margin-top: 1rem;
-  position: relative;
-  /* background-color: red; */
-  max-width: 50vw;
-  /* transform: scale(0.9); */
-
-  /* display: none; */
+  display: none;
 }
 .bitmoji img {
-  width: 40vw;
-  max-width: 550px;
-  height: auto;
-  /* transform: scale(0.9); */
+  width: 100%;
 }
 
 .about-mid {
@@ -356,7 +355,9 @@ section .contact-us h1::after,
   place-content: center;
   /* width: 100%; */
   column-gap: 2.5rem;
-  margin: 0 2rem 2rem 1rem;
+  margin: 2rem auto;
+
+  max-width: 1170px;
 }
 .shapes i {
   font-size: 5rem;
@@ -385,9 +386,10 @@ section .contact-us h1::after,
 }
 .project-container {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  column-gap: 4rem;
 }
 .project-container .right-col,
 .left-col {
@@ -395,9 +397,6 @@ section .contact-us h1::after,
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-}
-.project-container .right-col {
-  border-left: 2px solid #1af496;
 }
 
 .project-container .all-project {
@@ -408,9 +407,12 @@ section .contact-us h1::after,
 }
 .project-container .all-project h2 {
   margin-top: 10px;
+  text-align: center;
+  font-size: 16px;
 }
 .project-container .all-project img {
-  max-width: 35vw;
+  width: 90%;
+  max-width: 530px;
   aspect-ratio: 3/2;
   border-radius: 16px;
   box-shadow: 1px 0px 9px 4px var(--ACCENT-COLOR);
@@ -508,13 +510,6 @@ textarea {
 }
 
 @media screen and (min-width: 357px) {
-  .down-button {
-    /* align-self: center; */
-    position: absolute;
-    bottom: 30%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
   .shapes p {
     width: 100%;
   }
@@ -533,8 +528,20 @@ textarea {
     font-size: 2.5vw;
   }
 }
+@media screen and (min-width: 640px) {
+  .project-container .all-project img {
+    width: 90%;
+    max-width: 600px;
+  }
+}
 @media screen and (min-width: 768px) {
   .mob-head {
+    display: none;
+  }
+  .outer {
+    padding: 5rem 4rem 0 4rem;
+  }
+  .down-button {
     display: none;
   }
 
@@ -542,13 +549,6 @@ textarea {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-  }
-
-  .project {
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    width: 100%;
-    column-gap: 1rem;
   }
 
   .project figure {
@@ -588,18 +588,19 @@ textarea {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
   .project-container {
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    margin-top: 4rem;
   }
   .project-container .right-col {
-    border: none;
+    border-left: 2px solid #1af496;
+    padding-left: 3rem;
   }
   .project-container .all-project img {
-    max-width: 90%;
+    max-width: 640px;
     aspect-ratio: 3/2;
   }
 }
@@ -608,9 +609,25 @@ textarea {
   .second-main p {
     width: 768px;
   }
+  .bitmoji {
+    display: block;
+    width: 640px;
+    transform: translateY(-50px);
+  }
+  .top-main {
+    margin-top: 4rem;
+  }
 }
 @media screen and (min-width: 1440px) {
   .second-main p {
     width: 1024px;
+  }
+  .bitmoji {
+    width: 640px;
+    transform: translateY(-100px);
+  }
+
+  .outer {
+    padding: 5rem 6rem 0 6rem;
   }
 }
